# Quincy

./: CMakeLists.txt  HelpIndex.cpp  HelpIndex.h  KbdShortcuts.cpp  KbdShortcuts.h  QuincyDialogs.cpp  QuincyDialogs.h  QuincyDirPicker.cpp  QuincyDirPicker.h  QuincyForms.fbp  QuincyFrame.cpp  QuincyFrame.h  QuincyReplaceDlg.cpp  QuincyReplaceDlg.h  QuincyReplacePrompt.cpp  QuincyReplacePrompt.h  QuincySampleBrowser.cpp  QuincySampleBrowser.h  QuincySearchDlg.cpp  QuincySearchDlg.h  QuincySettingsDlg.cpp  QuincySettingsDlg.h  README.md  SymbolBrowser.cpp  SymbolBrowser.h  minGlue.h  minIni.c  minIni.h  portscan.cpp  portscan.h  rs232.c  rs232.h  svnrev.h  wxMinIni.h  wxQuincy.cpp  wxQuincy.h  wxquincy.rc
res/: Quincy16.xpm  Quincy32.xpm  Quincy48.xpm  filemodified.xpm  tb_bracematch.xpm  tb_breakpoint.xpm  tb_close.xpm  tb_columnfill.xpm  tb_compile.xpm  tb_contexthelp.xpm  tb_copy.xpm  tb_cut.xpm  tb_debug.xpm  tb_device.xpm  tb_find.xpm  tb_findnext.xpm  tb_help.xpm  tb_new.xpm  tb_open.xpm  tb_paste.xpm  tb_pause.xpm  tb_pawn.xpm  tb_print.xpm  tb_quit.xpm  tb_redo.xpm  tb_replace.xpm  tb_run.xpm  tb_runtocursor.xpm  tb_save.xpm  tb_saveall.xpm  tb_saveas.xpm  tb_settings.xpm  tb_stepinto.xpm  tb_stepout.xpm  tb_stepover.xpm  tb_stop.xpm  tb_transfer.xpm  tb_undo.xpm
